[package]
name = "ruuvitag_exporter"
version = "0.4.0"
edition = "2021"

[features]
modio = ["dep:fsipc"]
prometheus = ["dep:hyper", "dep:prometheus", "dep:lazy_static"]
default = ["prometheus"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["time", "sync", "rt", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", default-features = false }
ruuvi-sensor-protocol = { version = "0.5.0", default-features = false }
prometheus = { version = "0.13", default-features = false, optional = true}
lazy_static = { version = "1.4", optional = true}
hyper = { version = "0.14", features = ["server", "http1", "tcp"], optional=true}
tracing = { version = "0.1", default-features = true }
tracing-subscriber = { version= "0.3", default-features= true}
zbus = { version = "3", default-features = false, features = ["tokio"] }
#futures-lite = "*"
futures = { version = "*", default-features = false }
# Beta branch to test the batch api
fsipc = {  version = "~0.9.4", optional = true,  git = "ssh://git@gitlab.com/ModioAB/rust-fsipc.git", branch="batches-of-data"}
thiserror = "1.0.40"
anyhow = "1.0.71"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
